@@ -1,3 +1,10 @@
+2012-03-22  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_html.php
+	include/javascript/pandora.js
+	operation/agentes/stat_win.php: Fixed the period select
+	in the popup (statwin) view
+
 2012-03-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* godmode/agentes/module_manager_editor_common.php: Added global var
